# BizMarketing

./: .gitignore  BIZMARKETING_SKILL.md  MANIFEST.in  campaign_data.json  extract_ts_to_json.js  parse_ts.py  pyproject.toml  requirements.txt  setup.py  temp_extract.js  unify_module.py
bizmarketing/: force_db_install.py  hooks.py  modules.txt  patches.txt  setup.py  tasks.py
bizmarketing.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bizmarketing/api/: __init__.py  addispay.py  cleanup_data.py  dobiz_payment.py  dobiz_trial.py  import_campaign.py  import_campaign_base.py  platform_clients.py  social_media.py  subscription_cron.py  subscription_notifications.py  subscription_plans.py  subscription_upgrade.py  subscription_webhooks.py
bizmarketing/fixtures/: client_script.json  custom_field.json  property_setter.json
bizmarketing/patches/v1_0/: create_default_plans.py  create_dobiz_saas_settings.py  create_subscription_workspace.py  (+1 more)
bizmarketing/tests/: __init__.py  test_social_media.py  test_tasks.py
bizmarketing/www/: campaigns.html  campaigns.py  contact-us.html  contact-us.py  industries.html  industries.py  shop.html  shop.py  subscribe.py
deploy/: deploy_all_fixes.py  fix_scheduler_entrypoint.py  scheduler-entrypoint.sh  scheduler_entrypoint_fixed.sh
docs/architecture/: 01_module_design.md
docs/features/: 01_social_media_hub.md  02_analytics_dashboard.md  03_brand_creative_engine.md
docs/operations/: 01_zero_disruption_deployment.md
n8n_workflows/: trial_lifecycle_workflow.json
plans/2026-06-13/: DOBIZ_TRIAL_SUBSCRIPTION_IMPLEMENTATION_PLAN.md
(+122 files in other folders)
